--- a/backend_api_python/env.example
+++ b/backend_api_python/env.example
@@ -16,6 +16,14 @@ PYTHON_API_PORT=5000
 PYTHON_API_DEBUG=False
 
 # =========================
+# Database (SQLite)
+# =========================
+# 主库文件路径（可选）
+# - 不设置时，默认使用：backend_api_python/data/quantdinger.db
+# - Docker 推荐：/app/data/quantdinger.db
+SQLITE_DATABASE_FILE=
+
+# =========================
 # Pending orders worker (optional)
 # =========================
 # Paper mode default: disabled. If enabled, it will consume `pending_orders` and dispatch signals via webhook.
@@ -94,6 +102,26 @@ RATE_LIMIT=100
 ENABLE_CACHE=False
 ENABLE_REQUEST_LOG=True
 ENABLE_AI_ANALYSIS=True
+
+# =========================
+# Agent memory & reflection (optional)
+# =========================
+# Toggle agent memory usage in multi-agent analysis
+ENABLE_AGENT_MEMORY=true
+
+# Memory retrieval settings
+AGENT_MEMORY_ENABLE_VECTOR=true
+AGENT_MEMORY_EMBEDDING_DIM=256
+AGENT_MEMORY_TOP_K=5
+AGENT_MEMORY_CANDIDATE_LIMIT=500
+AGENT_MEMORY_HALF_LIFE_DAYS=30
+AGENT_MEMORY_W_SIM=0.75
+AGENT_MEMORY_W_RECENCY=0.20
+AGENT_MEMORY_W_RETURNS=0.05
+
+# Automated verification loop (replaces cron)
+ENABLE_REFLECTION_WORKER=false
+REFLECTION_WORKER_INTERVAL_SEC=86400
 
 # =========================
 # OpenRouter / LLM
